@@ -1,66 +1,81 @@
 package connecthub.Groups.Backend;
 
 import org.json.JSONArray;
+import org.json.JSONObject;
 
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 
-public class GroupDatabase {
+public class GroupDatabase implements GroupPersistence {
 
     private static final String GROUP_FILEPATH = "Groups.JSON";
-    public ArrayList<Group> groups;
+    public ArrayList<Group> groups = new ArrayList<>();
 
-    private static GroupDatabase instance;
+    private static GroupDatabase groupDatabase = null;
 
     private GroupDatabase() {
-        groups = loadGroupsFromJsonFile();
     }
 
     public static GroupDatabase getInstance() {
-        if (instance == null) {
-            instance = new GroupDatabase();
+        if (groupDatabase == null) {
+            groupDatabase = new GroupDatabase();
+            groupDatabase.loadGroupsFromJsonFile();
         }
-        return instance;
+        return groupDatabase;
     }
 
     public void saveGroupsToJsonFile() {
-        JSONArray groupsArray = new JSONArray();
-        for (Group group : groups) {
-            groupsArray.put(group.toJson());
+        GroupDatabase groupDatabase = GroupDatabase.getInstance();
+        JSONArray jsonArray = new JSONArray();
+
+        for (Group group : groupDatabase.groups) {
+            jsonArray.put(group.toJson());
         }
 
         try (FileWriter file = new FileWriter(GROUP_FILEPATH)) {
-            file.write(groupsArray.toString(4));
-            System.out.println("Groups saved to JSON file.");
+            file.write(jsonArray.toString(4));
+            System.out.println("Groups saved to JSON file successfully.");
         } catch (IOException e) {
-            e.printStackTrace();
+            System.err.println("Failed to save groups to JSON file: " + e.getMessage());
         }
     }
 
-    private ArrayList<Group> loadGroupsFromJsonFile() {
-        groups = new ArrayList<>();
-        File file = new File(GROUP_FILEPATH);
-        if (!file.exists()) {
-            System.out.println("Groups JSON file not found. Returning empty group list.");
-            return groups;
-        }
+    public ArrayList<Group> loadGroupsFromJsonFile() {
+        GroupDatabase db = GroupDatabase.getInstance();
+        db.groups.clear();
+
+        Path pathFile = Paths.get(GROUP_FILEPATH);
 
         try {
-            String json = new String(Files.readAllBytes(Paths.get(GROUP_FILEPATH)));
-            JSONArray groupsArray = new JSONArray(json);
-            for (int i = 0; i < groupsArray.length(); i++) {
-                groups.add(Group.fromJson(groupsArray.getJSONObject(i)));
+            if (!Files.exists(pathFile)) {
+                System.out.println("Groups JSON file not found. Returning empty group list.");
+                return db.groups;
+            }
+
+            String json = Files.readString(pathFile);
+            if (json.trim().isEmpty()) {
+                System.out.println("Groups JSON file is empty. Returning empty group list.");
+                return db.groups;
+            }
+
+            JSONArray jsonArray = new JSONArray(json);
+            for (int i = 0; i < jsonArray.length(); i++) {
+                JSONObject jsonObject = jsonArray.getJSONObject(i);
+                db.groups.add(Group.fromJson(jsonObject));
             }
             System.out.println("Groups loaded from JSON file.");
         } catch (IOException e) {
-            e.printStackTrace();
+            System.err.println("Error reading Groups JSON file: " + e.getMessage());
+        } catch (Exception e) {
+            System.err.println("Invalid JSON content in Groups JSON file: " + e.getMessage());
         }
 
-        return groups;
+        return db.groups;
     }
 
     public ArrayList<Group> getGroups() {
@@ -118,85 +133,18 @@ public class GroupDatabase {
     }
 
     public void addGroup(Group group) {
-        if (getGroupById(group.getGroupId()) == null) {
+        boolean groupExists = groups.stream().anyMatch(g -> g.getGroupId().equals(group.getGroupId()));
+        if (!groupExists) {
             groups.add(group);
-            saveGroupsToJsonFile();
+            saveGroupsToJsonFile(); // Save only when a new group is added
+            System.out.println("Group added successfully.");
         } else {
             System.out.println("Group already exists.");
         }
     }
 
-    // Updated methods to reflect changes made in the Group class:
-
-    public void promoteToAdmin(String groupId, String memberId, String adminId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.promoteToAdmin(groupId, memberId, adminId);
-    }
-
-    public void leaveGroup(String groupId, String memberId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.leaveGroup(groupId, memberId);
-    }
-
-    public void demoteToMember(String groupId, String adminId, String adminToDemote) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.demoteToMember(groupId, adminId, adminToDemote);
-    }
-
-    public void removeMember(String groupId, String memberId, String adminId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.removeMember(groupId, memberId, adminId);
-    }
-
-    public void addPost(String groupId, GroupPost post) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.addPost(groupId, post);
-    }
-
-    public void removePost(String groupId, String postId, String adminId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.removePost(groupId, postId, adminId);
-    }
-
-    public void requestToJoinGroup(String groupId, String userId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.requestToJoinGroup(groupId, userId);
-    }
-
-    public void approveJoinRequest(String groupId, String userId, String adminId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.approveJoinRequest(groupId, userId, adminId);
-    }
-
-    public void rejectJoinRequest(String groupId, String userId, String adminId) {
-        Group group = getGroupById(groupId);
-        if (group == null) {
-            throw new IllegalArgumentException("Group not found.");
-        }
-        group.rejectJoinRequest(groupId, userId, adminId);
+    public void removeGroup(String groupId) {
+        groups.removeIf(group -> group.getGroupId().equals(groupId));
+        saveGroupsToJsonFile();
     }
 }
